<resources>
    <string name="app_name">Moviz</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="sub_title_now_playing">Lebih mudah untuk melihat \n film yang sedang tayang</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="sub_title_presale">TIdak takut ketinggalan \n update film terbaru</string>
    <string name="cahsless">Cahsless</string>
    <string name="sub_title_cashless">Gunakan E-wallet untuk \n transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="name_hint">Nama</string>
    <string name="email_hint">email@mail.com</string>
    <string name="email">Email</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, \n Angga Risky</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="lewati">Lewati</string>
    <string name="nama_pengguna">Angga Risky</string>
    <string name="balance">IDR 250.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard_title">Storyboard</string>
    <string name="who_played_title">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="pilih_bangku_2">Pilih Bangku</string>
    <string name="allisa_battle">Allisa Battle</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">History</string>
</resources>